# laut

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  default.nix  flake.nix  pyproject.toml  test.nix  trace-signatures.py
.github/workflows/: nix-ci.yml  nix-flake-update.yml
datalog/: Cargo.toml  README.md  dependency_mismatches.facts  missing_builds.facts  missing_dependency_outputs.facts  missing_deps.facts  missing_resolutions.facts  nix_verify.dl  output.facts  pyproject.toml
datalog/inputs/: builds.facts  resolved_deps.facts  unresolved_deps.facts
datalog/src/: lib.rs
docs/: semantics.md
laut-cli/: Cargo.toml
laut-cli/src/: cli.rs  main.rs  sign_cmd.rs  verify_cmd.rs
laut-sign/: Cargo.toml
laut-sign/src/: constructive_trace.rs  content_hash.rs  http_cache.rs  ia_closure.rs  lib.rs  nix_cmd.rs  sign.rs  store_path.rs
laut-sign/src/sign/: ia_closure.rs  jws.rs  nix_version.rs
laut-verify/: Cargo.toml
laut-verify/src/: backend.rs  keyfiles.rs  lib.rs  orchestrator.rs  signature_verify.rs
laut-verify/src/orchestrator/: compute.rs  report.rs  resolutions.rs  tree.rs
laut-verify/tests/: debug_probe.rs  orchestrator_fixtures.rs
nix/: laut-reason.nix  laut.nix  lautr.nix  nix-verify-souffle.nix
nixpkgs-ca/: 0001-always-enable-content-addresssing.patch  0002-always-enable-content-addresssing-for-boostrap-tools.patch
patches/nixpkgs-swh/: 0001-make-find-tarballs.nix-return-drvs-and-be-pure.patch
rust/: Cargo.toml  pyproject.toml
rust/laut/: Cargo.toml
rust/laut/src/: main.rs  sign_cmd.rs  verify_cmd.rs
rust/lautr-core/: Cargo.toml
rust/lautr-core/src/: derivation.rs  keyfiles.rs  lib.rs  sign.rs  signing.rs  store_path.rs  thumbprint.rs
rust/lautr-py/: Cargo.toml
rust/lautr-py/src/: lib.rs  trust_model_reasoner.rs
rust/lautr-verify/: Cargo.toml
rust/lautr-verify/src/: backend.rs  debug.rs  drv_json.rs  keyfiles.rs  lib.rs  orchestrator.rs  signature_verify.rs  string_interner.rs  types.rs
rust/lautr-verify/src/orchestrator/: compute.rs  resolutions.rs  tree.rs
rust/lautr-verify/tests/: debug_probe.rs  orchestrator_fixtures.rs
rust/src/: lib.rs  signatures.rs  string_interner.rs  trust_model_reasoner.rs  type_confusion_test.rs  verifier.rs
src/laut/: __main__.py  build_config.py  cli.py  config.py  signing.py  storage.py  thumbprint.py
src/laut/nix/: commands.py  constructive_trace.py  deep_constructive_trace.py  keyfiles.py  placeholder.py  types.py
src/laut/verification/: fetch_signatures.py  frogification.py  trust_model.py  verification.py  verify_signatures.py
src/trace_signatures/: __init__.py  cli.py  nix.py  old_verification.py  signing.py  storage.py  utils.py  verification.py
src/trace_signatures/nix/: commands.py  constructive_trace.py  deep_constructive_trace.py  keyfiles.py  types.py
src/trace_signatures/verification/: fetch_signatures.py  trust_model.py  verification.py
testkeys/: builderA_key.private  builderA_key.public  builderB_key.private  builderB_key.public
tests/: test_build_unresolved_tree.py  test_cli_sign.py  test_dct.py  test_extract_nix_version_from_NIX_CONFIG.py  test_generate_combinations.py  test_placeholders.py  test_verify.py
tests/data/: env_NIX_CONFIG.txt  hello-ca-recursive.drv  hello-ia-recursive-unresolved.drv
tests/data/cli_sign/: resolved.drv
tests/data/drv_lookup/: generate_test_data_with_aterm.py  hello-ca-recursive-unresolved-aterm.json  hello-ca-recursive-unresolved.drv  hello-ia-recursive-unresolved.drv
tests/data/example_drvs/: multiple-outputs.drv  not-ascii.drv  resolved-problematic-fixed.drv  resolved-problematic.drv  unresolved.drv
tests/data/traces/: consolidate.py  extract_traces_from_minio.py
tests/traces/: consolidate.py
tests/traces/by_resolved_input_hash/: builderA.json
tests/traces/out4/: builderB.json
tests/traces/out5/: builderA.json
tests/traces/out5r/: builderA.json
tests/traces/run4/: -BwDHzEkD6S6V2u80vEEWTHq7NcO9V8iLcxsA9AYNH4  1eq_4kYp-raNlOZGOp-j6RyWM11324MmEtgOjWYIKtg  8BivDsgqqzMeiMBR6brQW0WWRBqKkYUDgcKkZlr5gwg  9JvbLRquU39Pt3y5CddMMUWTUEdlCFdooZ7afhsir-w  AcG194SQcrL7O-gY-vNfcbDBWvg3SeKYMTgekf109Pc  DsO1biqHGPyqvE5LcN-w2ZA5MQzX1mMI_L_X6H-0Cw0  LbZm6kI1Orhr4uRSZ6sqw6f0FKMhbw4KQ2XLI46hUdg  O2yjhzSFI9Kj0JUktk5LoaEz5JNSMXD1wqRiVm63skU  TpAVYrgQIaAEUtrn0qTUa-xHudHHH26ifpulYAtV9WQ  cBQAJCiNzDJPTqyvHK4Aazj1jYZhL8RMJXPNlvSqPTk  mXqRn4NhLywsnI1zObaNZHPp3lh4ojt5mJbuV7r7PAk  pHGJdbW8oiQfpW3CwBGorVqApCskifurBYnAqhqf5P4  pYkz8jsyi1OfLJiCp0b3_Xr0BAYjCafpIa8A4UevP5A  s_GsImWpbce2Em_qbvgHg7KhaaCh3zRE7EGbRp3WEzM  yXHp3Ems-no2Dxr5PuXTaRZ5_mnse0SmkzPs7W-uzKI
tests/traces/run5/: 2-3Y7pg6o2TK7hKdXvPL4SJu5EfmnPW4jlNSG4Ou1b8  3Ug-5G5542Q0aTzvIkiN_xyP_9Uc6UJTqsmh3NP8T1k  DRiZFclRf_ZKzTIyrv2VOcsxUaXwUiX1t5yX0pKmM2k  LKVzoy6Q1f2wIf-XCJsGX9dcXbK-CvbjFj0lG_XRuWI  Np2ugyKLYg19NoKsYltsIgqTRmNtmBpZ7DTuC0P9x60  O2yjhzSFI9Kj0JUktk5LoaEz5JNSMXD1wqRiVm63skU  VZxDyCTuDPA5vlX4YyyR3wBgj5sQLz2E4CNp8CMzWPg  XZ5xoJG9p55bBy7wAKxpJxm9hOTjgQbzRSNs1hG52Lk  mXqRn4NhLywsnI1zObaNZHPp3lh4ojt5mJbuV7r7PAk  nBA2nV7NvMWJbphA7JOctp0g5PFut2gNwMgRoUFAUrU  s_GsImWpbce2Em_qbvgHg7KhaaCh3zRE7EGbRp3WEzM  xFyJGN2FRBMQM21-qPTWbtNTMoxUuEUPUPJnuZHz-IM  zPgeG_WdqTKyronMEJq1by4U8qRIke199OxmpBHj1qA
tests/traces/signatures/: -ZU1gQOSwDDLHGc-P3zSltNrkpxPc_TCfdb6_15UjM0  -iNRG98kSJIQK6yLmCwveK6w-d5KXWynX-_Eohhbve8  0JvGxhzXf-DwTvl8g-eX0ez7qGPj2aKghIdaOZ1W4eU  1USqnOCCB9x1NgaBR7HTktTB2UgnZ3seHrfccw3cS9g  1_xtcLIWvIflyZhUcL3Venf0rTQzt5H88cPiVvQgBts  1eOI_yjZjaeXhGXtgjpkFu0wyD3q5gpP8IIBL0QzvWo  2XriEiTgae0MKdvNy_l4wtjpNEZ0lNM2DxQyCWNGzHs  2aK9Y7KzwSjVs6qYAoc5aR008inIpon9gavpOBK_X8s  37S6FXfPlRvxBmZqcmDn6bmOdTV8WUut1p1tuwvtxG0  3RzkHwNAUYH3rBnBVpcucpuTdtQEY4kcHXSp_cu7kTs  3XjoBRIg9hgUvtu_djmbcVo443x3cl6uN0Ts7uqfxJc  3rHEsgR57kmG7lsjens7-JW_T6lFlI0LvsFk5go667g  487nvzedb1gv-sCvCY3rAmrGsZ3P2Mz6Cj46sGUA_-U  (+125 more)
thinking/: definition_and_semantics_for_trust_models_with_thresholds.md
vm-tests/: debug-probe-script.py  default.nix  http-cache-server.py  sign-script.py  tamper-preimage.py  test-script.py  test-template.nix  verify-script.py
vm-tests/machines/: builder.nix  cache.nix  verifier.nix
(+303 files in other folders)
