[workspace]
resolver = "2"
members = [
    "laut-cli",
    "laut-sign",
    "laut-verify",
]

[workspace.package]
version = "0.4.0"
edition = "2024"

[workspace.dependencies]
nix-compat = { git = "https://github.com/mschwaig/snix", branch = "fanfic", package = "nix-compat" }
laut-compat = { git = "https://github.com/mschwaig/snix", branch = "fanfic", package = "laut-compat" }
ureq = { version = "2", default-features = false, features = ["tls"] }
ed25519-dalek = "2"
sha2 = "0.10"
base64 = "0.22"
serde_json = "1"
data-encoding = "2"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
regex = "1"
