[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "trace_signatures"
dynamic = ["version"]
description = "Nix build trace signature tool"
requires-python = ">=3.8"
# TODO: add license and classifiers
dependencies = [
    "rfc8785",
    "pyjwt",
    "cryptography",
    "boto3",
    "click",
    "pytest",
    "pytest-cov",
]

[project.scripts]
trace-signatures = "trace_signatures.cli:main"
"trace-signatures.py" = "trace_signatures.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["trace_signatures"]

[tool.setuptools_scm]

#[tool.pytest.ini_options]
#testpaths = ["tests"]
#python_files = ["test_*.py", "*_test.py"]
#addopts = "-ra -q"

[tool.coverage.run]
source = ["trace_signatures"]
branch = true

[tool.pytest.ini_options]
pythonpath = [
  "."
]
addopts = [
    "--import-mode=importlib",
]

[tool.pyright]
typeCheckingMode = "basic"
