[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "laut"
dynamic = ["version"]
description = "Nix build trace signature tool"
requires-python = ">=3.9"
# TODO: add license and classifiers
dependencies = [
    "rfc8785",
    "pyjwt",
    "cryptography",
    "boto3",
    "click",
]

[project.scripts]
laut = "laut.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
#addopts = "-ra -q"

[tool.pyright]
typeCheckingMode = "basic"
