[package]
name = "laut-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "laut"
path = "src/main.rs"

[features]
# `verify` is on by default so a plain `cargo build` yields the full CLI.
# Sign-only Nix builds pass `--no-default-features`, dropping `laut-verify`
# from the dep graph and from the clap subcommand surface.
default = ["verify"]
verify = ["dep:laut-verify"]

[dependencies]
laut-sign = { path = "../laut-sign" }
laut-verify = { path = "../laut-verify", optional = true }
clap = { workspace = true }
thiserror = { workspace = true }
