[package]
name = "laut-verify"
version.workspace = true
edition.workspace = true

[dependencies]
laut-sign = { path = "../laut-sign" }
nix-compat = { workspace = true }
ureq = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
data-encoding = { workspace = true }
tempfile = "3"
