[package]
name = "lautr"
version = "0.1.0"
edition = "2024"


[dependencies.pyo3]
version = "0.24.1"

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
nix-compat = { git = "https://github.com/mschwaig/snix", branch = "fanfic", package = "nix-compat" }
laut-compat = { git = "https://github.com/mschwaig/snix", branch = "fanfic", package = "laut-compat" }
ureq = { version = "2", default-features = false, features = ["tls"] }
ed25519-dalek = "2"
sha2 = "0.10"
base64 = "0.22"
serde_json = "1"
data-encoding = "2"
thiserror = "1"

[lib]
name = "lautr"
crate-type = ["cdylib", "rlib"]
