[package]
name = "laut"
version.workspace = true
edition.workspace = true

[[bin]]
name = "laut"
path = "src/main.rs"

[features]
# `verify` is on by default so a plain `cargo build` yields the full CLI.
# Sign-only Nix builds pass `--no-default-features`, dropping `lautr-verify`
# from the dep graph and from the clap subcommand surface.
default = ["verify"]
verify = ["dep:lautr-verify"]

[dependencies]
lautr-core = { path = "../lautr-core" }
lautr-verify = { path = "../lautr-verify", optional = true }
clap = { workspace = true }
thiserror = { workspace = true }
