[package]
name = "lautr-core"
version.workspace = true
edition.workspace = true

[dependencies]
nix-compat = { workspace = true }
laut-compat = { workspace = true }
sha2 = { workspace = true }
data-encoding = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
ureq = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
