[package]
name = "lautr-verify"
version.workspace = true
edition.workspace = true

[dependencies]
lautr-core = { path = "../lautr-core" }
nix-compat = { workspace = true }
ureq = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
data-encoding = { workspace = true }
tempfile = "3"
